# benchmark-capture

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
benchmark_capture/: __init__.py  cache.py  cli_init.py  config.py  decorators.py  init.py
benchmark_capture/examples/: test_hardware_detection.py  test_with_neuron.py
benchmark_capture/examples/vllm-neuron-reranker/: README.md  config.yaml  conftest.py  input_sample.csv  run_benchmark.sh  test_config_sweep.py  test_reranker.py
benchmark_capture/profilers/: __init__.py  base.py  detector.py  neuron.py  noop.py  nsight.py
benchmark_capture/templates/: __init__.py
benchmark_capture/templates/basic/: README.md  benchmark.toml  conftest.py  pytest.ini  test_example.py
benchmark_capture/templates/minimal/: README.md  benchmark.toml
benchmark_capture/templates/vllm/: README.md  benchmark.toml  conftest.py  pytest.ini  test_vllm.py
benchmark_capture/templates/vllm-neuron/: README.md  benchmark.toml  conftest.py  pytest.ini  run_benchmark.sh  test_vllm.py
benchmark_capture/utils/: __init__.py  vllm_config.py
examples/: README.md  example_perfetto_mode.py  test_simple.py
examples/vllm-neuron-reranker/: README.md  config.yaml  conftest.py  requirements.txt  test_reranker.py
scripts/: upload_testpypi.sh
tests/: __init__.py  conftest.py  test_cache.py  test_cli_init.py  test_config.py  test_decorators.py  test_detector.py  test_init.py  test_profilers.py  test_vllm_config.py
